--- a/_includes/header-custom.html
+++ b/_includes/header-custom.html
@@ -1,7 +1,7 @@
 <header id="header">
 
 	<a href="{{ site.baseurl }}">
-		<!--<img src="{{ "img/logo.jpg" | prepend: site.baseurl }}" alt="A-team Logo"> !-->
-	  <h1>A-team</h1>
+
+	  <h1>Blog team</h1>
 	</a>
 </header>
