--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,9 @@ layout: default
 <article id="post-page">
 	<h2>{{ page.title }}</h2>		
 	<time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
+	{{ post.category }}
 	<div class="content">
-
 		{{ content }}
-		
 	</div>
 </article>
 
